# Vertumnus

./: .gitignore  Cargo.toml  LIMITATIONS.md  MEMORY.md  README.md  ROADMAP.md  opencode.json
.github/workflows/: ci.yml
.opencode/: MEMORY.md  VERTUMNUS_SPEC.md  plan.md
.opencode/agents/: vertumnus-dev.md
.opencode/skills/vertumnus-spec/: SKILL.md
crates/vertumnus-builder/: Cargo.toml
crates/vertumnus-builder/src/: lib.rs
crates/vertumnus-cli/: Cargo.toml
crates/vertumnus-cli/src/: cache.rs  lib.rs  main.rs  registry.rs
crates/vertumnus-cli/tests/: integration_tests.rs
crates/vertumnus-generator/: Cargo.toml
crates/vertumnus-generator/src/: codegen.rs  generator.rs  lib.rs  stubs.rs
crates/vertumnus-inspector/: Cargo.toml
crates/vertumnus-inspector/src/: inspector.rs  ir.rs  lib.rs  syn_parser.rs
crates/vertumnus-mapper/: Cargo.toml
crates/vertumnus-mapper/src/: annotated_ir.rs  config.rs  dependency_resolver.rs  lib.rs  mapper.rs  monomorphization.rs  type_parser.rs
docs/: architecture.md  limitations.md  type-mapping.md
schemas/: annotated_ir.schema.json  ir.schema.json
templates/: README.md
tests/fixtures/data-structures/: Cargo.toml
tests/fixtures/data-structures/src/: lib.rs
tests/fixtures/phantom-markers/: Cargo.toml
tests/fixtures/phantom-markers/src/: lib.rs
tests/fixtures/py-data-structures/: Cargo.toml  py_data_structures.pyi  pyproject.toml
tests/fixtures/py-data-structures/python/py_data_structures/: __init__.py
tests/fixtures/py-data-structures/src/: lib.rs
tests/fixtures/py-simple-math/: Cargo.toml  py_simple_math.pyi  pyproject.toml
tests/fixtures/py-simple-math/src/: lib.rs
tests/fixtures/py-string-utils/: Cargo.toml  py_string_utils.pyi  pyproject.toml
tests/fixtures/py-string-utils/src/: lib.rs
tests/fixtures/simple-math/: Cargo.toml
tests/fixtures/simple-math/src/: lib.rs
tests/fixtures/string-utils/: Cargo.toml
tests/fixtures/string-utils/src/: lib.rs
tests/integration/: README.md  conftest.py  test_data_structures.py  test_simple_math.py  test_string_utils.py
