[workspace]
resolver = "2"
members = [
    "crates/vertumnus-cli",
    "crates/vertumnus-inspector",
    "crates/vertumnus-mapper",
    "crates/vertumnus-generator",
    "crates/vertumnus-builder",
]
exclude = ["tests/fixtures/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Transform any Rust crate into a Python package"
repository = "https://github.com/Zikithezikit/Vertumnus"

[workspace.dependencies]
vertumnus-inspector = { path = "crates/vertumnus-inspector", version = "0.3.0" }
vertumnus-mapper = { path = "crates/vertumnus-mapper", version = "0.3.0" }
vertumnus-generator = { path = "crates/vertumnus-generator", version = "0.3.0" }
vertumnus-builder = { path = "crates/vertumnus-builder", version = "0.3.0" }
