[package]
name = "vertumnus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vertumnus-inspector = { path = "../vertumnus-inspector" }
vertumnus-mapper = { path = "../vertumnus-mapper" }
vertumnus-generator = { path = "../vertumnus-generator" }
vertumnus-builder = { path = "../vertumnus-builder" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
