[package]
name = "vertumnus-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vertumnus-inspector = { path = "../vertumnus-inspector" }
vertumnus-mapper = { path = "../vertumnus-mapper" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
