[package]
name = "vertumnus-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
vertumnus-inspector.workspace = true
vertumnus-mapper.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
