[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "py_string_utils"
version = "0.2.0"
description = "Python bindings for `string-utils` v0.2.0"
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/Zikithezikit/Vertumnus"

[tool.maturin]
python-source = "python"
module-name = "py_string_utils._core"
